objects/APTS_Product_Variant__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Auto_Renew_Price_Basis__c</fullName>
        <description>DOC-6390</description>
        <label>Auto Renew Price Basis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Auto_Renew_Price_Percentage__c</fullName>
        <description>DOC-6390</description>
        <label>Auto Renew Price Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Eligibility__c</fullName>
        <label>Bridge_Eligibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CUAS1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CUAS+1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <label>APTS External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Language__c</fullName>
        <label>Language</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Partial_Year_Charge_Eligible__c</fullName>
        <label>Partial_Year_Charge_Eligible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Delivery_Pick__c</fullName>
        <label>Product Delivery Pick</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>eBook</fullName>
                </value>
                <value>
                    <fullName>Online/Web</fullName>
                </value>
                <value>
                    <fullName>Media CD</fullName>
                </value>
                <value>
                    <fullName>Live/In Person/Virtual</fullName>
                </value>
                <value>
                    <fullName>e-Flex</fullName>
                </value>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>Online/Internet</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>Softbound</fullName>
                </value>
                <value>
                    <fullName>Word</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Pick 1</fullName>
                </value>
                <value>
                    <fullName>Pick 2</fullName>
                </value>
                <value>
                    <fullName>Pick 3</fullName>
                </value>
                <value>
                    <fullName>Pick 4</fullName>
                </value>
                <value>
                    <fullName>Pick 5</fullName>
                </value>
                <value>
                    <fullName>Pick 8</fullName>
                </value>
                <value>
                    <fullName>Pick 10</fullName>
                </value>
                <value>
                    <fullName>Pick 12</fullName>
                </value>
                <value>
                    <fullName>Pick 16</fullName>
                </value>
                <value>
                    <fullName>Pick 24</fullName>
                </value>
                <value>
                    <fullName>Pick 48</fullName>
                </value>
                <value>
                    <fullName>Flex-E</fullName>
                </value>
                <value>
                    <fullName>Live In Person</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
                <value>
                    <fullName>Recorded Virtual</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Product_Delivery__c</fullName>
        <label>Product Delivery</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_ID__c</fullName>
        <label>Product ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Long_Description__c</fullName>
        <label>Product Long Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Variant_ID__c</fullName>
        <label>Product Variant ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Variant</relationshipLabel>
        <relationshipName>Product_Variant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Renewal_Type__c</fullName>
        <description>Renewal Type Indicator</description>
        <label>Renewal_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Source_System_ID__c</fullName>
        <label>Source System ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Source_System_Name__c</fullName>
        <label>Source System Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Product Variant</label>
    <nameField>
        <label>Product Variant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Variant</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>